tests/ui/impl-trait/impl_trait_projections.stderr
error[E0667]: `impl Trait` is not allowed in path parameters
  --> $DIR/impl_trait_projections.rs:12:51
   |
LL | fn projection_is_disallowed(x: impl Iterator) -> <impl Iterator>::Item {
   |                                                   ^^^^^^^^^^^^^

error[E0667]: `impl Trait` is not allowed in path parameters
  --> $DIR/impl_trait_projections.rs:19:9
   |
LL |     -> <impl Iterator as Iterator>::Item
   |         ^^^^^^^^^^^^^

error[E0667]: `impl Trait` is not allowed in path parameters
  --> $DIR/impl_trait_projections.rs:26:27
   |
LL |     -> <::std::ops::Range<impl Debug> as Iterator>::Item
   |                           ^^^^^^^^^^

error[E0667]: `impl Trait` is not allowed in path parameters
  --> $DIR/impl_trait_projections.rs:35:29
   |
LL |     -> <dyn Iterator<Item = impl Debug> as Iterator>::Item
   |                             ^^^^^^^^^^

error[E0667]: `impl Trait` is not allowed in path parameters
  --> $DIR/impl_trait_projections.rs:12:51
   |
LL | fn projection_is_disallowed(x: impl Iterator) -> <impl Iterator>::Item {
   |                                                   ^^^^^^^^^^^^^

error[E0277]: the trait bound `impl Debug: Step` is not satisfied
  --> $DIR/impl_trait_projections.rs:26:8
   |
LL |     -> <::std::ops::Range<impl Debug> as Iterator>::Item
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Step` is not implemented for `impl Debug`, which is required by `std::ops::Range<impl Debug>: Iterator`
   |
   = help: the following other types implement trait `Step`:
             Char
             Ipv4Addr
             Ipv6Addr
             NonZero<u128>
             NonZero<u16>
             NonZero<u32>
             NonZero<u64>
             NonZero<u8>
           and 14 others
   = note: required for `std::ops::Range<impl Debug>` to implement `Iterator`

error[E0277]: the trait bound `impl Debug: Step` is not satisfied
  --> $DIR/impl_trait_projections.rs:29:1
   |
LL | / {
LL | |
LL | |     (1i32..100).next().unwrap()
LL | | }
   | |_^ the trait `Step` is not implemented for `impl Debug`, which is required by `std::ops::Range<impl Debug>: Iterator`
   |
   = help: the following other types implement trait `Step`:
             Char
             Ipv4Addr
             Ipv6Addr
             NonZero<u128>
             NonZero<u16>
             NonZero<u32>
             NonZero<u64>
             NonZero<u8>
           and 14 others
   = note: required for `std::ops::Range<impl Debug>` to implement `Iterator`

error: aborting due to 7 previous errors

Some errors have detailed explanations: E0277, E0667.
For more information about an error, try `rustc --explain E0277`.
